# adgenius-ai

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_LOCK.md  DEEP_REPO_HEALTH_CHECK.md  Dockerfile  EditorBuildSettings.asset.txt  KOSCHEI_PROJECT_AUDIT_2026-05-02.md  KOSCHEI_TRANSFER_SNAPSHOT.md  KoscheiBuildConfigModel.cs.txt  KoscheiGeneratedGameConfig.cs.txt  KoscheiObstacle.cs.txt  KoscheiPlayerController.cs.txt  KoscheiRunnerGame.cs.txt  Main.unity.txt  Makefile  RAILWAY_DEPLOYMENT.md  README.md  REPO_AUDIT_2026-04-27.md  REPO_CHECKLIST.md  game-factory-missing-files.md  game-factory-pipeline-prompt.md  game_factory_brief.json  go.mod  koschei-game-config (1).json  koschei-game-config.json  koschei-master-build-prompt.md  manifest.json  nixpacks.toml  railway.json  repo_inventory_report.txt
apps/api/: .env.example  Dockerfile  fly.toml  pyproject.toml
apps/api/app/: config.py  database.py  dependencies.py  main.py  pages.py  supabase_client.py
apps/api/app/api/: __init__.py
apps/api/app/middleware/: logging.py  request_id.py
apps/api/app/models/: __init__.py  adnet.py  ai_logs.py  base.py  brand.py  briefing.py  campaign.py  delivery.py  finance.py  generation.py  lead.py  publisher.py  usage.py  user.py
apps/api/app/schemas/: auth.py  serving.py
apps/api/app/services/: ad_selection.py  ad_stack_setup.py  ai_matching.py  auth_service.py  brief_service.py  click_service.py  finance_service.py  (+2 more)
apps/api/migrations/: README.md
apps/api/tests/: finance_staging_smoke_validation.md  test_finance_correctness.py  test_smoke_api_contract.py
(+654 files in other folders)
